--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/perfilFragment"
-        android:name="com.example.filmotion.ui.main.fragments.PerfilFragment"
+        android:name="com.example.filmotion.ui.main.fragments.OpcionesFragment"
         android:label="Perfil" />
 
 </navigation>
